Move expand-collapse icon next to chapter title, prevent time from line-breaking

--- a/css/site.css
+++ b/css/site.css
@@ -111,6 +111,9 @@ article > h1 > small,
   font-weight: normal;
   white-space: nowrap;
 }
+time {
+  white-space: nowrap;
+}
 article > h1 > small > time,
 .media-heading > small > time {
   font-style: italic;
